--- a/index.html
+++ b/index.html
@@ -220,9 +220,14 @@
 
   <!-- footer -->
   <section id="footer">
-    <h4></h4>
-
-
+    <h4>Follow our Internet page</h4>
+    <p>All around the world</p>
+    <span class="icons">
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-youtube"></i>
+    </span>
   </section>
 
 
